--- a/style.css
+++ b/style.css
@@ -4,11 +4,11 @@ body {
 
 .jumbotron {
   padding-top: 6rem;
-  background-color: #f2ff00;
+  background-color: #08c9f4;
 }
 
 #Project {
-  background-color: #f2ff00;
+  background-color: #08c9f4;
 }
 
 section {
